--- a/src/Table.css
+++ b/src/Table.css
@@ -17,3 +17,21 @@
 .table tr:nth-of-type(odd) {
 	background-color: #f3f2f8;
 }
+
+.table--dark tr{
+	background-color: #212121 !important;
+	color:#f5f6fa;
+}
+
+.info__flag img{
+	width:20px;
+	/*height:20px;*/
+	border-radius: 5px;
+}
+
+.info__flag {
+	height:29px;
+	width:16%;
+	background-size: cover;
+	border-radius: 8px;
+}
