--- a/src/Map.css
+++ b/src/Map.css
@@ -7,6 +7,10 @@
 	box-shadow: 0 0 8px -4px rgba(0,0,0,0.5);
 }
 
+.map--dark {
+	background-color: #343a40;
+}
+
 .map .leaflet-container {
 	height:100%;
 }
